--- a/app.json
+++ b/app.json
@@ -35,6 +35,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       }
-    }
+    },
+    "newArchEnabled":true
   }
 }
