--- a/package.json
+++ b/package.json
@@ -12,23 +12,26 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^4.0.1",
+    
     "expo": "^52.0.37",
     "expo-constants": "~17.0.7",
     "expo-linking": "~7.0.5",
     "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
     "nativewind": "latest",
-    "react": "18.3.1",
+    
+    "react": "19.0.0",
     "react-dom": "^19.0.0",
-    "react-native": "0.76.7",
-    "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-web": "^0.19.13"
+    "react-native": "0.78.0",
+    "react-native-animatable": "^1.4.0",
+    "react-native-css-transformer": "^2.0.0",
+    "react-native-reanimated": "3.17.0",
+    "react-native-safe-area-context": "5.2.0",
+    "react-native-screens": "~4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
@@ -36,12 +39,13 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
     "extends": "universe/native",
     "root": true
   },
-  "main": "expo-router/entry",
   "private": true
 }
